--- a/ukooa-to-csv_wplotting.ipynb
+++ b/ukooa-to-csv_wplotting.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# UKOOA-2-CSV\n",
-    "### The main purpose of this notebook is to create an easier way of handling fussy UKOOA (and other) navigation files for loading 2D seismic into geoscience software.\n",
+    "### The main purpose of this notebook is to create an easier way of handling UKOOA (and other) navigation files for loading 2D seismic into geoscience software.\n",
     "### Posted a discussion in #open-geoscience in SWUNG and thanks to Matt Hall [agile] for coming in big for laying a great foundation. If you don't want to fuss with the gdal/ogr dependency, check his version.\n",
     "\n",
     "<br>**Discussion: https://swung.slack.com/archives/C0AG7T5UP/p1593723082091000**\n",
