--- a/ascii_to_zmap.ipynb
+++ b/ascii_to_zmap.ipynb
@@ -42,11 +42,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fld = \"./xcover_gravmags/\"\n",
+    "# fld = \"./gravmags/\"\n",
     "# filename = \"ras_grav09.txt\"\n",
     "# data = os.path.join(fld, filename)\n",
     "# print(data)\n",
-    "os.chdir = \"./xcover_gravmags/\""
+    "os.chdir = \"./gravmags/\""
    ]
   },
   {
